alteração para gerenciamento dos usuarios

--- a/src/main/webapp/app/detalhe/detalhe.component.html
+++ b/src/main/webapp/app/detalhe/detalhe.component.html
@@ -16,7 +16,7 @@
             {{ estabelecimento!.complemento ? estabelecimento!.complemento : '' }}
             {{ estabelecimento!.bairro ? estabelecimento!.bairro : '' }} - {{ estabelecimento!.cep ? estabelecimento!.cep : '' }}
           </label>
-          <button class="btn btn-primary btncupom" (click)="openFullscreen()">Cupons</button>
+          <button *ngIf="this.cupomCollection?.length != 0" class="btn btn-primary btncupom" (click)="openFullscreen()">Cupons</button>
         </div>
       </div>
     </div>
