--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -34,7 +34,7 @@
           >
             <span>
               <fa-icon icon="users-cog"></fa-icon>
-              <span>Cadastre seu Restaurente</span>
+              <span>Cadastre seu Restaurante</span>
             </span>
           </a>
           <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="admin-estabelecimento">
@@ -116,18 +116,6 @@
             </span>
           </a>
           <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="admin-menu">
-            <li>
-              <a
-                class="dropdown-item"
-                routerLink="/detalhe"
-                routerLinkActive="active"
-                [routerLinkActiveOptions]="{ exact: true }"
-                (click)="collapseNavbar()"
-              >
-                <fa-icon icon="location-dot" [fixedWidth]="true"></fa-icon>
-                <span>Detalhe</span>
-              </a>
-            </li>
             <li>
               <a
                 class="dropdown-item"
